QueueParser.py
# Generated from Queue.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class QueueParser ( Parser ):

    grammarFileName = "Queue.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'.'", "'?'", "'Create'", "'['", "']'", 
                     "'Spawn'", "'Enqueue'", "'EQ'", "'Dequeue'", "'DQ'", 
                     "'Clear'", "'C'", "'Respawn'", "'Print'", "'Output'", 
                     "'queue'", "'element'", "'from'", "'with'", "'priority'", 
                     "'head'", "'tail'", "'Is'", "'empty'", "'populated'", 
                     "'inside'", "'Swap'", "'<->'", "'Soul'", "'swap'", 
                     "'Combine'", "'queues'", "'Concatenate'", "'+'", "'Reverse'", 
                     "'R'", "'card'", "'on'", "'Exit'", "'X'", "'out'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "NEWLINE", "INT", "ID", 
                      "NAME", "TWITTERHANDLE", "IP", "DISCORD", "WS" ]

    RULE_prog = 0
    RULE_stmts = 1
    RULE_stmt = 2
    RULE_createQueue = 3
    RULE_queueOptions = 4
    RULE_enqueueOptions = 5
    RULE_dequeue = 6
    RULE_clear = 7
    RULE_printQueueOptions = 8
    RULE_theQueue = 9
    RULE_elemental = 10
    RULE_heads = 11
    RULE_tails = 12
    RULE_booleanQueue = 13
    RULE_empty = 14
    RULE_populated = 15
    RULE_inside = 16
    RULE_miscQueue = 17
    RULE_swap = 18
    RULE_combine = 19
    RULE_reverse = 20
    RULE_exQueue = 21

    ruleNames =  [ "prog", "stmts", "stmt", "createQueue", "queueOptions", 
                   "enqueueOptions", "dequeue", "clear", "printQueueOptions", 
                   "theQueue", "elemental", "heads", "tails", "booleanQueue", 
                   "empty", "populated", "inside", "miscQueue", "swap", 
                   "combine", "reverse", "exQueue" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    NEWLINE=42
    INT=43
    ID=44
    NAME=45
    TWITTERHANDLE=46
    IP=47
    DISCORD=48
    WS=49

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmts(self):
            return self.getTypedRuleContext(QueueParser.StmtsContext,0)


        def EOF(self):
            return self.getToken(QueueParser.EOF, 0)

        def getRuleIndex(self):
            return QueueParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = QueueParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.stmts()
            self.state = 45
            self.match(QueueParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QueueParser.StmtContext)
            else:
                return self.getTypedRuleContext(QueueParser.StmtContext,i)


        def getRuleIndex(self):
            return QueueParser.RULE_stmts

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmts" ):
                listener.enterStmts(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmts" ):
                listener.exitStmts(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmts" ):
                return visitor.visitStmts(self)
            else:
                return visitor.visitChildren(self)




    def stmts(self):

        localctx = QueueParser.StmtsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stmts)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 47
                self.stmt()
                self.state = 50 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (((_la) & ~0x3f) == 0 and ((1 << _la) & 1695044141016) != 0):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.create = None # CreateQueueContext
            self.basicQueueOptions = None # QueueOptionsContext
            self.printOptions = None # PrintQueueOptionsContext
            self.booleanQueueOptions = None # BooleanQueueContext
            self.miscQueueOptions = None # MiscQueueContext
            self.exitQueue = None # ExQueueContext

        def NEWLINE(self):
            return self.getToken(QueueParser.NEWLINE, 0)

        def createQueue(self):
            return self.getTypedRuleContext(QueueParser.CreateQueueContext,0)


        def queueOptions(self):
            return self.getTypedRuleContext(QueueParser.QueueOptionsContext,0)


        def printQueueOptions(self):
            return self.getTypedRuleContext(QueueParser.PrintQueueOptionsContext,0)


        def booleanQueue(self):
            return self.getTypedRuleContext(QueueParser.BooleanQueueContext,0)


        def miscQueue(self):
            return self.getTypedRuleContext(QueueParser.MiscQueueContext,0)


        def exQueue(self):
            return self.getTypedRuleContext(QueueParser.ExQueueContext,0)


        def getRuleIndex(self):
            return QueueParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = QueueParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stmt)
        try:
            self.state = 76
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3, 6]:
                self.enterOuterAlt(localctx, 1)
                self.state = 52
                localctx.create = self.createQueue()
                self.state = 53
                self.match(QueueParser.T__0)
                self.state = 54
                self.match(QueueParser.NEWLINE)
                pass
            elif token in [7, 8, 9, 10, 11, 12, 13]:
                self.enterOuterAlt(localctx, 2)
                self.state = 56
                localctx.basicQueueOptions = self.queueOptions()
                self.state = 57
                self.match(QueueParser.T__0)
                self.state = 58
                self.match(QueueParser.NEWLINE)
                pass
            elif token in [14, 15]:
                self.enterOuterAlt(localctx, 3)
                self.state = 60
                localctx.printOptions = self.printQueueOptions()
                self.state = 61
                self.match(QueueParser.T__0)
                self.state = 62
                self.match(QueueParser.NEWLINE)
                pass
            elif token in [23]:
                self.enterOuterAlt(localctx, 4)
                self.state = 64
                localctx.booleanQueueOptions = self.booleanQueue()
                self.state = 65
                self.match(QueueParser.T__1)
                self.state = 66
                self.match(QueueParser.NEWLINE)
                pass
            elif token in [4, 27, 29, 31, 33, 35]:
                self.enterOuterAlt(localctx, 5)
                self.state = 68
                localctx.miscQueueOptions = self.miscQueue()
                self.state = 69
                self.match(QueueParser.T__0)
                self.state = 70
                self.match(QueueParser.NEWLINE)
                pass
            elif token in [39, 40]:
                self.enterOuterAlt(localctx, 6)
                self.state = 72
                localctx.exitQueue = self.exQueue()
                self.state = 73
                self.match(QueueParser.T__0)
                self.state = 74
                self.match(QueueParser.NEWLINE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CreateQueueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.queueName = None # Token
            self.queueSize = None # Token

        def ID(self):
            return self.getToken(QueueParser.ID, 0)

        def INT(self):
            return self.getToken(QueueParser.INT, 0)

        def getRuleIndex(self):
            return QueueParser.RULE_createQueue

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCreateQueue" ):
                listener.enterCreateQueue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCreateQueue" ):
                listener.exitCreateQueue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCreateQueue" ):
                return visitor.visitCreateQueue(self)
            else:
                return visitor.visitChildren(self)




    def createQueue(self):

        localctx = QueueParser.CreateQueueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_createQueue)
        try:
            self.state = 92
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 78
                self.match(QueueParser.T__2)
                self.state = 79
                self.match(QueueParser.T__3)
                self.state = 80
                localctx.queueName = self.match(QueueParser.ID)
                self.state = 81
                self.match(QueueParser.T__4)
                self.state = 82
                self.match(QueueParser.T__3)
                self.state = 83
                localctx.queueSize = self.match(QueueParser.INT)
                self.state = 84
                self.match(QueueParser.T__4)
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 85
                self.match(QueueParser.T__5)
                self.state = 86
                self.match(QueueParser.T__3)
                self.state = 87
                localctx.queueName = self.match(QueueParser.ID)
                self.state = 88
                self.match(QueueParser.T__4)
                self.state = 89
                self.match(QueueParser.T__3)
                self.state = 90
                localctx.queueSize = self.match(QueueParser.INT)
                self.state = 91
                self.match(QueueParser.T__4)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QueueOptionsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.enqueue = None # EnqueueOptionsContext
            self.remove = None # DequeueContext
            self.erase = None # ClearContext

        def enqueueOptions(self):
            return self.getTypedRuleContext(QueueParser.EnqueueOptionsContext,0)


        def dequeue(self):
            return self.getTypedRuleContext(QueueParser.DequeueContext,0)


        def clear(self):
            return self.getTypedRuleContext(QueueParser.ClearContext,0)


        def getRuleIndex(self):
            return QueueParser.RULE_queueOptions

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQueueOptions" ):
                listener.enterQueueOptions(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQueueOptions" ):
                listener.exitQueueOptions(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQueueOptions" ):
                return visitor.visitQueueOptions(self)
            else:
                return visitor.visitChildren(self)




    def queueOptions(self):

        localctx = QueueParser.QueueOptionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_queueOptions)
        try:
            self.state = 97
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7, 8]:
                self.enterOuterAlt(localctx, 1)
                self.state = 94
                localctx.enqueue = self.enqueueOptions()
                pass
            elif token in [9, 10]:
                self.enterOuterAlt(localctx, 2)
                self.state = 95
                localctx.remove = self.dequeue()
                pass
            elif token in [11, 12, 13]:
                self.enterOuterAlt(localctx, 3)
                self.state = 96
                localctx.erase = self.clear()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EnqueueOptionsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.queueName = None # Token
            self.elements = None # Token
            self.priority = None # Token

        def ID(self):
            return self.getToken(QueueParser.ID, 0)

        def NAME(self):
            return self.getToken(QueueParser.NAME, 0)

        def INT(self):
            return self.getToken(QueueParser.INT, 0)

        def TWITTERHANDLE(self):
            return self.getToken(QueueParser.TWITTERHANDLE, 0)

        def IP(self):
            return self.getToken(QueueParser.IP, 0)

        def DISCORD(self):
            return self.getToken(QueueParser.DISCORD, 0)

        def getRuleIndex(self):
            return QueueParser.RULE_enqueueOptions

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnqueueOptions" ):
                listener.enterEnqueueOptions(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnqueueOptions" ):
                listener.exitEnqueueOptions(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEnqueueOptions" ):
                return visitor.visitEnqueueOptions(self)
            else:
                return visitor.visitChildren(self)




    def enqueueOptions(self):

        localctx = QueueParser.EnqueueOptionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_enqueueOptions)
        try:
            self.state = 179
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 99
                self.match(QueueParser.T__6)
                self.state = 100
                self.match(QueueParser.T__3)
                self.state = 101
                localctx.queueName = self.match(QueueParser.ID)
                self.state = 102
                self.match(QueueParser.T__4)
                self.state = 103
                self.match(QueueParser.T__3)
                self.state = 104
                localctx.elements = self.match(QueueParser.NAME)
                self.state = 105
                self.match(QueueParser.T__4)
                self.state = 106
                self.match(QueueParser.T__3)
                self.state = 107
                localctx.priority = self.match(QueueParser.INT)
                self.state = 108
                self.match(QueueParser.T__4)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 109
                self.match(QueueParser.T__6)
                self.state = 110
                self.match(QueueParser.T__3)
                self.state = 111
                localctx.queueName = self.match(QueueParser.ID)
                self.state = 112
                self.match(QueueParser.T__4)
                self.state = 113
                self.match(QueueParser.T__3)
                self.state = 114
                localctx.elements = self.match(QueueParser.TWITTERHANDLE)
                self.state = 115
                self.match(QueueParser.T__4)
                self.state = 116
                self.match(QueueParser.T__3)
                self.state = 117
                localctx.priority = self.match(QueueParser.INT)
                self.state = 118
                self.match(QueueParser.T__4)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 119
                self.match(QueueParser.T__6)
                self.state = 120
                self.match(QueueParser.T__3)
                self.state = 121
                localctx.queueName = self.match(QueueParser.ID)
                self.state = 122
                self.match(QueueParser.T__4)
                self.state = 123
                self.match(QueueParser.T__3)
                self.state = 124
                localctx.elements = self.match(QueueParser.IP)
                self.state = 125
                self.match(QueueParser.T__4)
                self.state = 126
                self.match(QueueParser.T__3)
                self.state = 127
                localctx.priority = self.match(QueueParser.INT)
                self.state = 128
                self.match(QueueParser.T__4)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 129
                self.match(QueueParser.T__6)
                self.state = 130
                self.match(QueueParser.T__3)
                self.state = 131
                localctx.queueName = self.match(QueueParser.ID)
                self.state = 132
                self.match(QueueParser.T__4)
                self.state = 133
                self.match(QueueParser.T__3)
                self.state = 134
                localctx.elements = self.match(QueueParser.DISCORD)
                self.state = 135
                self.match(QueueParser.T__4)
                self.state = 136
                self.match(QueueParser.T__3)
                self.state = 137
                localctx.priority = self.match(QueueParser.INT)
                self.state = 138
                self.match(QueueParser.T__4)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 139
                self.match(QueueParser.T__7)
                self.state = 140
                self.match(QueueParser.T__3)
                self.state = 141
                localctx.queueName = self.match(QueueParser.ID)
                self.state = 142
                self.match(QueueParser.T__4)
                self.state = 143
                self.match(QueueParser.T__3)
                self.state = 144
                localctx.elements = self.match(QueueParser.NAME)
                self.state = 145
                self.match(QueueParser.T__4)
                self.state = 146
                self.match(QueueParser.T__3)
                self.state = 147
                localctx.priority = self.match(QueueParser.INT)
                self.state = 148
                self.match(QueueParser.T__4)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 149
                self.match(QueueParser.T__7)
                self.state = 150
                self.match(QueueParser.T__3)
                self.state = 151
                localctx.queueName = self.match(QueueParser.ID)
                self.state = 152
                self.match(QueueParser.T__4)
                self.state = 153
                self.match(QueueParser.T__3)
                self.state = 154
                localctx.elements = self.match(QueueParser.TWITTERHANDLE)
                self.state = 155
                self.match(QueueParser.T__4)
                self.state = 156
                self.match(QueueParser.T__3)
                self.state = 157
                localctx.priority = self.match(QueueParser.INT)
                self.state = 158
                self.match(QueueParser.T__4)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 159
                self.match(QueueParser.T__7)
                self.state = 160
                self.match(QueueParser.T__3)
                self.state = 161
                localctx.queueName = self.match(QueueParser.ID)
                self.state = 162
                self.match(QueueParser.T__4)
                self.state = 163
                self.match(QueueParser.T__3)
                self.state = 164
                localctx.elements = self.match(QueueParser.IP)
                self.state = 165
                self.match(QueueParser.T__4)
                self.state = 166
                self.match(QueueParser.T__3)
                self.state = 167
                localctx.priority = self.match(QueueParser.INT)
                self.state = 168
                self.match(QueueParser.T__4)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 169
                self.match(QueueParser.T__7)
                self.state = 170
                self.match(QueueParser.T__3)
                self.state = 171
                localctx.queueName = self.match(QueueParser.ID)
                self.state = 172
                self.match(QueueParser.T__4)
                self.state = 173
                self.match(QueueParser.T__3)
                self.state = 174
                localctx.elements = self.match(QueueParser.DISCORD)
                self.state = 175
                self.match(QueueParser.T__4)
                self.state = 176
                self.match(QueueParser.T__3)
                self.state = 177
                localctx.priority = self.match(QueueParser.INT)
                self.state = 178
                self.match(QueueParser.T__4)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DequeueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.queueName = None # Token

        def ID(self):
            return self.getToken(QueueParser.ID, 0)

        def getRuleIndex(self):
            return QueueParser.RULE_dequeue

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDequeue" ):
                listener.enterDequeue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDequeue" ):
                listener.exitDequeue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDequeue" ):
                return visitor.visitDequeue(self)
            else:
                return visitor.visitChildren(self)




    def dequeue(self):

        localctx = QueueParser.DequeueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_dequeue)
        try:
            self.state = 189
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [9]:
                self.enterOuterAlt(localctx, 1)
                self.state = 181
                self.match(QueueParser.T__8)
                self.state = 182
                self.match(QueueParser.T__3)
                self.state = 183
                localctx.queueName = self.match(QueueParser.ID)
                self.state = 184
                self.match(QueueParser.T__4)
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 2)
                self.state = 185
                self.match(QueueParser.T__9)
                self.state = 186
                self.match(QueueParser.T__3)
                self.state = 187
                localctx.queueName = self.match(QueueParser.ID)
                self.state = 188
                self.match(QueueParser.T__4)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClearContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.queueName = None # Token

        def ID(self):
            return self.getToken(QueueParser.ID, 0)

        def getRuleIndex(self):
            return QueueParser.RULE_clear

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClear" ):
                listener.enterClear(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClear" ):
                listener.exitClear(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClear" ):
                return visitor.visitClear(self)
            else:
                return visitor.visitChildren(self)




    def clear(self):

        localctx = QueueParser.ClearContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_clear)
        try:
            self.state = 203
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11]:
                self.enterOuterAlt(localctx, 1)
                self.state = 191
                self.match(QueueParser.T__10)
                self.state = 192
                self.match(QueueParser.T__3)
                self.state = 193
                localctx.queueName = self.match(QueueParser.ID)
                self.state = 194
                self.match(QueueParser.T__4)
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 2)
                self.state = 195
                self.match(QueueParser.T__11)
                self.state = 196
                self.match(QueueParser.T__3)
                self.state = 197
                localctx.queueName = self.match(QueueParser.ID)
                self.state = 198
                self.match(QueueParser.T__4)
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 3)
                self.state = 199
                self.match(QueueParser.T__12)
                self.state = 200
                self.match(QueueParser.T__3)
                self.state = 201
                localctx.queueName = self.match(QueueParser.ID)
                self.state = 202
                self.match(QueueParser.T__4)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintQueueOptionsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.queue = None # TheQueueContext
            self.element = None # ElementalContext
            self.head = None # HeadsContext
            self.tail = None # TailsContext

        def theQueue(self):
            return self.getTypedRuleContext(QueueParser.TheQueueContext,0)


        def elemental(self):
            return self.getTypedRuleContext(QueueParser.ElementalContext,0)


        def heads(self):
            return self.getTypedRuleContext(QueueParser.HeadsContext,0)


        def tails(self):
            return self.getTypedRuleContext(QueueParser.TailsContext,0)


        def getRuleIndex(self):
            return QueueParser.RULE_printQueueOptions

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintQueueOptions" ):
                listener.enterPrintQueueOptions(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintQueueOptions" ):
                listener.exitPrintQueueOptions(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintQueueOptions" ):
                return visitor.visitPrintQueueOptions(self)
            else:
                return visitor.visitChildren(self)




    def printQueueOptions(self):

        localctx = QueueParser.PrintQueueOptionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_printQueueOptions)
        try:
            self.state = 221
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 205
                self.match(QueueParser.T__13)
                self.state = 206
                localctx.queue = self.theQueue()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 207
                self.match(QueueParser.T__13)
                self.state = 208
                localctx.element = self.elemental()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 209
                self.match(QueueParser.T__13)
                self.state = 210
                localctx.head = self.heads()
                pass

